<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SelectPointsActivity">
    <item
        android:id="@+id/change_view"
        android:orderInCategory="100"
        android:title="@string/change_view"
        android:onClick="changeView" />
    <item
        android:id="@+id/nextPoint"
        android:orderInCategory="100"
        android:title="@string/nextPoint"
        android:onClick="nextPoint" />
    <item
        android:id="@+id/select_end"
        android:orderInCategory="100"
        android:title="@string/selected_all"
        android:onClick="finishRegister" />

    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        android:onClick="exitApplication" />
</menu>