<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.delaroystudios.camera.MainActivity">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_message"
            android:textColor="#ff0000"
            android:visibility="invisible"/>


        <TextView
            android:id="@+id/label_enter_optical_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zadejte_kalibra_n_parametry_pro_fotoapar_t" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2">

        <EditText
            android:id="@+id/tf_cxf"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/value_cx" />

        <EditText
            android:id="@+id/tf_cyf"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/value_cy" />

        <EditText
            android:id="@+id/tf_fxf"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/value_fx" />

        <EditText
            android:id="@+id/tf_fyf"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:gravity="center"
            android:inputType="text"
            android:text="@string/value_fy" />
        </GridLayout>

        <TextView
            android:id="@+id/label_enter_focal_length"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:text="@string/zadejte_kalibracni_parametry_pro_kameru"
            />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2">

                <EditText
                    android:id="@+id/tf_cxc"
                    android:layout_width="74dp"
                    android:layout_height="64dp"
                    android:gravity="center"
                    android:inputType="text"
                    android:text="@string/_341" />

                <EditText
                    android:id="@+id/tf_cyc"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:gravity="center"
                    android:inputType="text"
                    android:text="@string/_172" />


                <EditText
                    android:id="@+id/tf_fxc"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:gravity="center"
                    android:inputType="text"
                    android:text="@string/_2040" />

                <EditText
                    android:id="@+id/tf_fyc"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:gravity="center"
                    android:inputType="text"
                    android:text="@string/_1548" />
        </GridLayout>

        <Button
            android:id="@+id/enter_calibration"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:onClick="insertCalibrationData"
            android:text="@string/insert_calibration_data" />

    </LinearLayout>
    </ScrollView>

</RelativeLayout>