<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="com.delaroystudios.camera.SettingActivity"
    android:layout_gravity="center_vertical|center_horizontal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zadejte_refere_n_sn_mek" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showFileDialog"
        android:text="@string/vyber" />

    <TextView
        android:id="@+id/ref_frame_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enablePath"
        android:onClick="setEnableButton"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tf_path_to_first_frame" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="showFileDialog"
        android:text="@string/vyber" />

    <TextView
        android:id="@+id/fist_frame_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tf_path_to_second_frame" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="showFileDialog"
        android:text="@string/vyber" />

    <TextView
        android:id="@+id/second_frame_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:onClick="nextPage"
        android:text="@string/continues" />
</LinearLayout>