<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.delaroystudios.camera.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/re_fotografie"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_play"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:onClick="playApplication"/>

        <Button
            android:id="@+id/button_end"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:onClick="endApplication"/>
    </LinearLayout>


</RelativeLayout>
